@@ -1,6 +1,15 @@
 2008-09-04  Bastien Nocera  <hadess@hadess.net>
 
 	* libjuicer/sj-metadata-musicbrainz.c (mb_list_albums):
+	* libjuicer/sj-metadata-musicbrainz3.c (mb_list_albums):
+	* libjuicer/sj-metadata-musicbrainz3.h:
+	* libjuicer/sj-metadata.c (sj_metadata_helper_check_media):
+	* libjuicer/sj-metadata.h: Move the nautilus-burn assisted
+	media type checking to a shared location
+
+2008-09-04  Bastien Nocera  <hadess@hadess.net>
+
+	* libjuicer/sj-metadata-musicbrainz.c (mb_list_albums):
 	* libjuicer/sj-metadata-musicbrainz3.c (make_album_from_release):
 	* libjuicer/sj-metadata.c (sj_metadata_helper_scan_date):
 	* libjuicer/sj-metadata.h: Move the date parsing to a common place
